cmake_minimum_required(VERSION 3.16)
project(learnopengl)
link_libraries(GL GLU GLEW glfw3 X11 Xrandr pthread Xi dl Xinerama Xcursor assimp)
set(CMAKE_CXX_STANDARD 14)

add_executable(brdf BRDF.cpp)
add_executable(ibl IBL.cpp)
add_executable(model model.cpp)
add_executable(window window.cpp)
add_executable(texture texture.cpp)
add_executable(rectangle rectangle.cpp)
add_executable(cubemap cubemap.cpp)
add_executable(advancedLight advancedLight.cpp)
add_executable(normalMapping normalMapping.cpp)
add_executable(PBR PBR.cpp)
